# parley

./: .ghci  LICENSE  README.md  parley.cabal  parley.nix  shell.nix
src/: Main.hs
src/Parley/: Config.hs  DB.hs  Main.hs  Types.hs
