name:                parley
version:             0.1.0.0
synopsis:            Light weight comments for the web
-- description:
homepage:            https://github.com/ajmccluskey/parley
license:             BSD3
license-file:        LICENSE
author:              Andrew McCluskey
maintainer:          andrew@ajmccluskey.com
copyright:           Copyright (C) 2017 Andrew McCluskey
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Parley.Main
                       Parley.Types
                       Parley.DB
                       Parley.Config
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.9 && <4.10
                     , aeson >=1.0.2 && <1.3
                     , bytestring >=0.10.8 && <0.10.9
                     , http-types >=0.9 && <0.10
                     , sqlite-simple >=0.4.13 && <0.5
                     , sqlite-simple-errors >=0.6 && <0.7
                     , text >=1.2.2 && <1.2.3
                     , wai >=3.2 && <3.3
                     , warp >=3.2 && <3.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

executable             parley
  build-depends:       base >=4.9 && <4.10
                     , parley
  hs-source-dirs:      src-exe
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -Wall -Werror
