name:                parley
version:             0.1.0.0
synopsis:            Light weight comments for the web
-- description:
homepage:            https://github.com/qfpl/parley
license:             BSD3
license-file:        LICENSE
author:              Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
maintainer:          Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
copyright:           Copyright (c) 2017, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

source-repository head
  type:           git
  location:       git@github.com:qfpl/parley.git

library
  exposed-modules:     Parley.Main
                       Parley.Types
                       Parley.DB
                       Parley.Config
  -- other-modules:
  -- other-extensions:
  build-depends:       aeson >=1.0.2 && <1.3
                     , base >=4.9 && <4.10
                     , bytestring >=0.10.8 && <0.10.9
                     , http-types >=0.9 && <0.10
                     , optparse-applicative >=0.13.2 && <0.14
                     , sqlite-simple >=0.4.13 && <0.5
                     , sqlite-simple-errors >=0.6 && <0.7
                     , text >=1.2.2 && <1.2.3
                     , time >=1.6 && <1.7
                     , wai >=3.2 && <3.3
                     , warp >=3.2 && <3.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable             parley
  build-depends:       base >=4.9 && <4.10
                     , parley
  hs-source-dirs:      src-exe
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -Wall
